--- a/webapp/view/PageTree.view.xml
+++ b/webapp/view/PageTree.view.xml
@@ -2,7 +2,9 @@
 	controllerName="cmjs.controller.PageTree"
 	displayBlock="true"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:dnd="sap.ui.core.dnd">
+
 	<Page title="Hierarchie">
 		<subHeader>
 			<OverflowToolbar>
@@ -17,8 +19,18 @@
 				mode="SingleSelectMaster"				
 				items="{path: 'view>/tree'}" 
 				selectionChange=".onSelectionChange">
-				<StandardTreeItem 
-					title="{view>title}" selected="{= ${view>_id} === ${view>/selectedId} }" />
+				<dragDropConfig>
+					<dnd:DragDropInfo
+						sourceAggregation="items"
+						targetAggregation="items"
+						dropPosition="OnOrBetween"
+						drop=".onDrop"/>
+				</dragDropConfig>
+				<items>
+					<StandardTreeItem 
+						title="{view>title}" 
+						selected="{= ${view>_id} === ${view>/selectedId} }" />
+				</items>
 			</Tree>
 		</content>
 	</Page>
