creating new pages

--- a/webapp/view/PageTree.view.xml
+++ b/webapp/view/PageTree.view.xml
@@ -19,7 +19,8 @@
 				busy="{view>/busy}"
 				mode="SingleSelectMaster"				
 				items="{path: 'tree>/nodes'}" 
-				selectionChange=".onSelectionChange" >
+				selectionChange=".onSelectionChange" 
+				toggleOpenState=".onToggleOpenState">
 				<dragDropConfig>
 					<dnd:DragDropInfo
 						sourceAggregation="items"
