--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -6,13 +6,13 @@
 	xmlns:mvc="sap.ui.core.mvc">
 	<Shell
 		appWidthLimited="false"
-		title="{i18n>title}">
+		title="{i18n>appTitle}">
 		<tnt:ToolPage 
 			id="app"
 			sideExpanded="{view>/expanded}">
 			<tnt:header>
 				<tnt:ToolHeader>
-					<Title text="{i18n>title}"/>
+					<Title text="{i18n>appTitle}"/>
 				</tnt:ToolHeader>
 			</tnt:header>
 			<tnt:sideContent>
@@ -32,6 +32,10 @@
 								text="{i18n>media}" 
 								icon="sap-icon://background" 
 								select=".onMediaSelect"/>							
+							<tnt:NavigationListItem
+								text="{i18n>pageTypes}" 
+								icon="sap-icon://wrench" 
+								select=".onPageTypesSelect"/>
 						</tnt:NavigationList>
 					</tnt:item>
 					<tnt:fixedItem>
@@ -40,10 +44,6 @@
 								text="{i18n>Web-Sites}" 
 								icon="sap-icon://internet-browser" 
 								select=".onWebSitesSelect"/>
-							<tnt:NavigationListItem
-								text="{i18n>pageTypes}" 
-								icon="sap-icon://wrench" 
-								select=".onPageTypesSelect"/>
 							<tnt:NavigationListItem 
 								text="{i18n>stettings}" 
 								icon="sap-icon://settings"/>
