--- a/webapp/view/PageTree.view.xml
+++ b/webapp/view/PageTree.view.xml
@@ -5,33 +5,31 @@
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns:dnd="sap.ui.core.dnd">
 
-	<VBox>
-		<items>
+	<Tree
+		id="PageTree"
+		busy="{view>/busy}"
+		mode="SingleSelectMaster"				
+		items="{path: 'tree>/nodes'}" 
+		selectionChange=".onSelectionChange" 
+		toggleOpenState=".onToggleOpenState">
+		<headerToolbar>
 			<OverflowToolbar>
+				<Title text="{i18n>pages}"/>
 				<ToolbarSpacer/>
 				<Button icon="sap-icon://add-document" press=".onNewpagePressed"/>
-				<Button icon="sap-icon://delete" press=".onDeletePressed" enabled="{= ${tree>/selectedId} !== null }"/>
 			</OverflowToolbar>
-			<Tree
-				id="PageTree"
-				busy="{view>/busy}"
-				mode="SingleSelectMaster"				
-				items="{path: 'tree>/nodes'}" 
-				selectionChange=".onSelectionChange" 
-				toggleOpenState=".onToggleOpenState">
-				<dragDropConfig>
-					<dnd:DragDropInfo
-						sourceAggregation="items"
-						targetAggregation="items"
-						dropPosition="OnOrBetween"
-						drop=".onDrop"/>
-				</dragDropConfig>
-				<items>
-					<StandardTreeItem 
-						title="{tree>title}" 
-						selected="{= ${tree>_id} === ${view>/selectedId} }" />
-				</items>
-			</Tree>
+		</headerToolbar>
+		<dragDropConfig>
+			<dnd:DragDropInfo
+				sourceAggregation="items"
+				targetAggregation="items"
+				dropPosition="OnOrBetween"
+				drop=".onDrop"/>
+		</dragDropConfig>
+		<items>
+			<StandardTreeItem 
+				title="{tree>title}" 
+				selected="{= ${tree>_id} === ${view>/selectedId} }" />
 		</items>
-	</VBox>
+	</Tree>
 </mvc:View>
