--- a/webapp/view/PageTypes.view.xml
+++ b/webapp/view/PageTypes.view.xml
@@ -3,6 +3,7 @@
 	displayBlock="true"
 	xmlns="sap.m"
 	xmlns:l="sap.ui.layout"
+    xmlns:f="sap.ui.layout.form"
 	xmlns:mvc="sap.ui.core.mvc">
 
     <l:Splitter
@@ -15,25 +16,75 @@
             </layoutData>
             <content>
                 <List 
-                    headerText="{i18n>pageTypes}"
                     items="{view>/pageTypes}"
-                    mode="SingleSelectMaster">
+                    mode="None">
+                    <headerToolbar>
+                        <OverflowToolbar>
+                            <Title text="{i18n>pageTypes}"/>
+                            <ToolbarSpacer/>
+                            <Button icon="sap-icon://add-document" press=".onNewpagePressed"/>
+                        </OverflowToolbar>
+                    </headerToolbar>
                     <items>
                         <CustomListItem
                             type="Navigation"
                             press=".onListItemPress">
-                            <Text text="{view>_id}"/>
+                            <Text text="{view>_id}" class="sapUiTinyMargin"/>
                         </CustomListItem>
                     </items>
                 </List>
             </content>
         </ScrollContainer>
-        <ScrollContainer>
+        <ScrollContainer visible="{view>/showPageType}" id="page">
             <layoutData>
                 <l:SplitterLayoutData size="auto" />
-            </layoutData>
+            </layoutData>            
             <content>
-                
+                <f:SimpleForm
+                    columnsL="1"
+                    columnsM="1"
+                    columnsXL="1"
+                    editable="true"
+                    emptySpanXL="4"
+                    emptySpanL="4"
+                    emptySpanM="0"
+                    emptySpanS="0"
+                    labelSpanXL="1"
+                    labelSpanL="1"
+                    labelSpanM="2"
+                    labelSpanS="12">
+                    <f:toolbar>
+                        <OverflowToolbar>
+                            <Title text="{view>_id}"/>
+                            <ToolbarSpacer/>
+							<Button icon="sap-icon://edit" text="{i18n>edit}" type="Emphasized" visible="{= ! ${view>/editable} }" press=".onEditPress"/>
+							<Button icon="sap-icon://delete" text="{i18n>delete}" type="Reject" visible="{= ! ${view>/editable} }" press=".onDeletePress" enabled="false"/>
+							<Button icon="sap-icon://accept" text="{i18n>save}" type="Accept" visible="{view>/editable}" press=".onSavePress"/>
+							<Button icon="sap-icon://decline" text="{i18n>cancel}" type="Reject" visible="{view>/editable}" press=".onCancelPress"/>
+                        </OverflowToolbar>
+                    </f:toolbar>
+                    <f:content>
+                        <Label text="{i18n>pageType}"/>
+                        <Input value="{view>_id}" editable="false"/>
+                    </f:content>
+                </f:SimpleForm>
+                <Table 
+                    items="{view>fields}">
+                    <columns>
+                        <Column><Text text="Feld"/></Column>
+                        <Column><Text text="Label"/></Column>
+                        <Column><Text text="Typ"/></Column>
+                    </columns>
+                    <items>
+                        <ColumnListItem>
+                            <cells>
+                                <Input value="{view>id}" editable="{view>/editable}"/>
+                                <Input value="{view>label}" editable="{view>/editable}"/>
+                                <Input value="{view>fieldType}" editable="{view>/editable}"/>
+                            </cells>
+                        </ColumnListItem>
+                    </items>
+                </Table>
             </content>
         </ScrollContainer>
     </l:Splitter>
