editing page types

--- a/webapp/view/PageTypes.view.xml
+++ b/webapp/view/PageTypes.view.xml
@@ -4,7 +4,6 @@
 	xmlns="sap.m"
 	xmlns:l="sap.ui.layout"
     xmlns:f="sap.ui.layout.form"
-    xmlns:t="sap.ui.table"
     xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc">
 
@@ -37,11 +36,11 @@
                 </List>
             </content>
         </ScrollContainer>
-        <ScrollContainer visible="{view>/showPageType}" id="page">
+        <VBox visible="{view>/showPageType}" id="page" height="100%">
             <layoutData>
                 <l:SplitterLayoutData size="auto" />
             </layoutData>            
-            <content>
+            <items>
                 <f:SimpleForm
                     layout="ResponsiveGridLayout"
                     columnsL="1"
@@ -61,50 +60,45 @@
                             <Title text="{view>_id}"/>
                             <ToolbarSpacer/>
 							<Button icon="sap-icon://edit" text="{i18n>edit}" type="Emphasized" visible="{= ! ${view>/editable} }" press=".onEditPress"/>
-							<Button icon="sap-icon://delete" text="{i18n>delete}" type="Reject" visible="{= ! ${view>/editable} }" press=".onDeletePress" enabled="false"/>
+							<Button icon="sap-icon://delete" text="{i18n>delete}" type="Reject" visible="{= ! ${view>/editable} }" press=".onDeletePress"/>
 							<Button icon="sap-icon://accept" text="{i18n>save}" type="Accept" visible="{view>/editable}" press=".onSavePress"/>
 							<Button icon="sap-icon://decline" text="{i18n>cancel}" type="Reject" visible="{view>/editable}" press=".onCancelPress"/>
                         </OverflowToolbar>
                     </f:toolbar>
                     <f:content>
                         <Label text="{i18n>pageType}"/>
-                        <Input value="{view>_id}" editable="false"/>
+                        <Input id="_id" value="{view>_id}" editable="{view>/new}"/>
                     </f:content>
                 </f:SimpleForm>
-                <t:Table 
-                    visibleRowCountMode="Auto"
-                    selectionMode="None"
-                    rows="{view>fields}">
-                    <t:columns>
-                        <t:Column width="20em">
+                <Table
+                    items="{view>fields}">
+                    <columns>
+                        <Column width="20em">
                             <Label text="Feld"/>
-                            <t:template>
-                                <Input value="{view>id}" editable="{view>/editable}"/>
-                            </t:template>
-                        </t:Column>
-                        <t:Column width="20em">
+                        </Column>
+                        <Column width="20em">
                             <Label text="Label"/>
-                            <t:template>
-                                <Input value="{view>label}" editable="{view>/editable}"/>
-                            </t:template>
-                        </t:Column>
-                        <t:Column width="8em">
+                        </Column>
+                        <Column width="10em">
                             <Label text="Typ"/>
-                            <t:template>
-                                <Select selectedKey="{view>fieldType}" items="{view>/fieldTypes}" editable="{view>/editable}">
-                                    <core:Item key="{view>key}" text="{view>name}" />
-                                </Select>
-                            </t:template>
-                        </t:Column>
-                        <t:Column>
-                            <t:template>
-                                <Button icon="sap-icon://delete" type="Transparent" press=".onFieldDelete"  enabled="{view>/editable}"/>
-                            </t:template>
-                        </t:Column>
-                    </t:columns>
-                </t:Table>
-            </content>
-        </ScrollContainer>
+                        </Column>
+                        <Column>                        
+                            <Label text="Löschen"/>
+                        </Column>
+                    </columns>
+                    <ColumnListItem>
+                        <cells>
+                            <Input value="{view>id}" editable="{view>/editable}"/>
+                            <Input value="{view>label}" editable="{view>/editable}"/>
+                            <Select selectedKey="{view>fieldType}" items="{view>/fieldTypes}" editable="{view>/editable}" width="10em">
+                                <core:Item key="{view>key}" text="{view>name}" />
+                            </Select>
+                            <Button icon="sap-icon://delete" type="Transparent" press=".onFieldDelete"  enabled="{view>/editable}"/>
+                        </cells>
+                    </ColumnListItem>
+                </Table>
+            </items>
+        </VBox>
     </l:Splitter>
 
 </mvc:View>
