--- a/project/template/layouts/default.hbs
+++ b/project/template/layouts/default.hbs
@@ -1,5 +1,19 @@
 <html>
 <body>
+<style>
+.title {
+    display:flex;
+    background-image:url('/uploads/photo1.jpg'); 
+    width:100%; height:10em;
+    color:white;
+    flex-direction: column;
+    justify-content: end;
+}
+</style>
+<div class="title">
+<h1>CMJS</h1>
+<h2>pure JavaScript Content Management</h2>
+</div>
 {{{body}}}
 </body>
 </html>
