--- a/project/template/layouts/default.hbs
+++ b/project/template/layouts/default.hbs
@@ -1,19 +1,41 @@
 <html>
 <body>
 <style>
-.title {
-    display:flex;
-    background-image:url('/uploads/photo1.jpg'); 
-    width:100%; height:10em;
-    color:white;
-    flex-direction: column;
-    justify-content: end;
-}
+    body {
+        margin: 0px;
+        font-family: sans-serif;
+    }
+    h1, h2, h3, p {
+        margin: 0.5rem 0rem;
+    }
+    .content {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    .menu {
+        background-color: #7a9321;
+        height: 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 10%;
+    }
+    .menu > a,
+    .menu > a:active,
+    .menu > a:hover,
+    .menu > a:visited  {
+        color: white;
+        text-decoration: none;
+    }
 </style>
-<div class="title">
-<h1>CMJS</h1>
-<h2>pure JavaScript Content Management</h2>
+<image src="/public/header.jpg" width="100%"/>
+<div class="menu">
+  {{#menu}}
+    <a href="{{link _id}}">{{menuTitle}}</a>
+  {{/menu}}
 </div>
+<div class="content">
 {{{body}}}
+</div>
 </body>
 </html>
