refactor: new thumbnail path

--- a/cmjs/admin/view/Media.view.xml
+++ b/cmjs/admin/view/Media.view.xml
@@ -31,7 +31,7 @@
 		content="{images>/}">
 		<content>
 			<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop"
-				backgroundImage="/uploads/thumbnails/{images>name}" 
+				backgroundImage="/uploads/.thumbnails/{images>name}" 
 				url="/uploads/{images>name}" 
 				scope="ActionRemove"
 				press=".onRemovePress">
